# mosaic-library

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.MD  bag_proc.py  composite.py  genindex.html  index.html  modules.html  mosaicking.core.html  mosaicking.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  simple-similarity.py  simple.py  simple_pixel.py  sledge-similarity.py  sof_lk.py  test_reg.py  test_synthetic.py  tutorial.html
.github/workflows/: doc_pages.yml
_sources/: index.rst.txt  mosaicking.core.rst.txt
_static/: documentation_options.js
docker/: Dockerfile  docker-compose.yml
docs/source/: conf.py  modules.rst  mosaicking.rst  tutorial.rst
docs/source/assets/snippets/: cli_examples_01.txt  cli_examples_02.txt
examples/: color-correction.py  combine_tiles.py  correct-and-apply-rotation.py  euler-rotate.py  keyboard-perspective.py  mosaic.py  mosaicv2.py  offline.py  perspective-playground.py  perspective-test.py  point-projection.py  preprocessing-playground.py  registration-playground.py  visual.py
mosaicking/: __init__.py  calibration.py  mosaic.py  offline.py  preprocessing.py  registration.py  similaritymosaic.py  splitter.py  transformations.py  utils.py
src/mosaicking/: __init__.py  calibration.py  core.py  mosaic.py  preprocessing.py  registration.py  splitter.py  transformations.py  utils.py
src/mosaicking/core/: db.py  helpers.py  interface.py
src/mosaicking/resources/: schema.sql
tests/: test_core.py  test_cudavideoplayer.py  test_mosaic.py  test_preprocessing.py  test_registration.py  test_sql.py  test_videoplayer.py
tests/data/: sparus_snippet.csv  sparus_time_offset.yaml
