[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "mosaic-library"
version = "1.0.2"
authors = [
  { name="Fletcher Thompson", email="fletho@dtu.dk" },
]
description = "A python library for manipulating images for underwater mosaicking applications."
readme = "README.MD"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/DTUAqua-ObsTek/mosaic-library"
"Bug Tracker" = "https://github.com/DTUAqua-ObsTek/mosaic-library/issues"