[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-library"
dynamic = ["version"]
authors = [
  { name="Fletcher Thompson", email="fletho@dtu.dk" },
]
description = "A python library for manipulating images for underwater mosaicking applications."
readme = "README.MD"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "opencv-contrib-python",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/DTUAqua-ObsTek/mosaic-library"
"Bug Tracker" = "https://github.com/DTUAqua-ObsTek/mosaic-library/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mosaicking"]
namespaces = false
[tool.setuptools_scm]
write_to = "src/mosaicking/version.py"