[metadata]
name = mosaic-library
version = 0.0.6

[options]
packages = mosaicking
python_requires = >=3.9
setup_requires =
    wheel
    build
    importlib

install_requires =
    opencv-contrib-python == 4.5.2.54
    numpy
    scipy
    scikit-image
    imutils
    pandas

[options.entry_points]
console_scripts =
    mosaic.py = mosaicking.mosaic:main