[metadata]
name = mosaic-library
version = 0.0.8

[options]
packages = mosaicking
python_requires = >=3.9
setup_requires =
    build
    importlib
    wheel

install_requires =
    matplotlib
    numpy
    opencv-contrib-python
    opencv-python
    pandas
    pyyaml
    scipy

[options.entry_points]
console_scripts =
    mosaic.py = mosaicking.mosaic:main