[metadata]
name = mosaic-library
version = 1.0.3

[options]
packages = mosaicking
python_requires = >=3.9
setup_requires =
    build
    importlib
    wheel

install_requires =
    matplotlib
    numpy
    opencv-contrib-python
    opencv-python
    pandas
    pyyaml
    scikit-learn
    scipy

[options.entry_points]
console_scripts =
    mosaic.py = mosaicking.mosaic:main
    calibration.py = mosaicking.calibration:main